--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li id="languages"></li>
             <li id="currencies"></li>
             <li id="borders"></li>
-            <li id="latlng"></li>
+           <!-- <li id="latlng"></li>-->
         </ul>
     </div>
     <script type="text/javascript" src="script.js">
