--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="dialog" title="Information about country">
 
         <ul id="countries">
-            <!-- <li>No data</li>-->
+            <li>No data</li>
             <li id="capital"></li>
             <li id="languages"></li>
             <li id="currencies"></li>
